<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<include
		android:id="@+id/tbDetails"
		layout="@layout/item_layout_toolbar" />

	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
		android:id="@+id/srlDetailsRefresh"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<androidx.core.widget.NestedScrollView
			android:fillViewport="true"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:id="@+id/llDetailsContent"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:layout_marginTop="@dimen/margin_m"
					android:layout_marginHorizontal="@dimen/margin_m"
					android:weightSum="1">

					<androidx.cardview.widget.CardView
						android:layout_width="@dimen/image_width"
						android:layout_height="@dimen/image_height"
						android:layout_marginEnd="@dimen/margin_xs"
						app:cardBackgroundColor="@color/transparent"
						app:cardCornerRadius="@dimen/corner_radius_xxxs"
						app:cardElevation="@dimen/elevation_zero">

						<ImageView
							android:id="@+id/ivDetailsImage"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:scaleType="centerCrop" />

					</androidx.cardview.widget.CardView>

					<LinearLayout
						android:layout_width="0dp"
						android:layout_weight="1"
						android:layout_height="wrap_content"
						android:orientation="vertical">

						<TextView
							android:id="@+id/tvDetailsTitle"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:textSize="@dimen/extra_large_text_size"
							android:maxLines="3" />

					</LinearLayout>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/llDetailsSynopsis"
					android:layout_marginTop="@dimen/margin_m"
					android:layout_marginHorizontal="@dimen/margin_m"
					android:orientation="vertical">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/margin_xs"
						android:textSize="@dimen/extra_large_text_size"
						android:text="@string/synopsis" />

					<TextView
						android:id="@+id/tvDetailsSynopsis"
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/margin_m"
					android:layout_marginHorizontal="@dimen/margin_m"
					android:id="@+id/llDetailsGenre"
					android:orientation="vertical">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/margin_xs"
						android:textSize="@dimen/extra_large_text_size"
						android:text="@string/genres" />

					<com.google.android.material.chip.ChipGroup
						android:id="@+id/cgDetailsTags"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal"/>

				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:layout_marginTop="@dimen/margin_m"
					android:layout_marginHorizontal="@dimen/margin_m"
					android:id="@+id/llDetailsEpisodes">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/margin_xs"
						android:textSize="@dimen/extra_large_text_size"
						android:text="@string/episodes"/>

					<androidx.recyclerview.widget.RecyclerView
						android:id="@+id/rvDetailsEpisodes"
						android:nestedScrollingEnabled="false"
						android:layout_width="match_parent"
						android:layout_height="match_parent"/>

				</LinearLayout>

			</LinearLayout>

		</androidx.core.widget.NestedScrollView>

	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>